Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69608

cocoa: key press events for modifier keys do not have nativeVirtualKey

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.15.2, 6.2.7, 6.4.1
    • 5.11.1
    • QPA
    • None
    • macOS
    • ac310d5b23b56a217c408f8ee549c36f73c7a437 (qt/qtbase/dev) e8d5eed76b3b1920aedb43662a2c184a082fc7b1 (qt/qtbase/5.15) 2cb798ec7b (qt/qtbase/6.4) 2cb798ec7b (qt/tqtc-qtbase/6.4) 63373bcbed (qt/tqtc-qtbase/6.2)

      Steps to reproduce: Press e.g. Shift+A.

      Expected outcome: Two key press events are generated, both with nativeVirtualKey() set.

      Actual outcome: Two key press events are generated, but only second one has nativeVirtualKey() set.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mibrunin Michael Bruning
            juri.valdmann Jüri Valdmann (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: